# NEMSEER

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  docs_pages.yml  pyproject.toml
.github/workflows/: ci.yml  cicd.yml  docs_pages.yml  draft-pdf.yml
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
docs/source/: api.md  changelog.md  conduct.md  conf.py  contributing.md  downloader.rst  examples.md  glossary.md  index.md  index.rst  license.md  nemseer.md  quick_start.md  readme.md  roadmap.md  todo.md
docs/source/_static/: demand_cov.html  p5min_error_2021_ahead_time_percentile.html  p5min_error_2021_tod_percentile.html  pd_error_2021_ahead_samples.html  pd_error_NEM_2021_ahead_time_percentile.html  pd_error_NSW1_2021_aheadtime_percentile.html  pd_error_QLD1_2021_aheadtime_percentile.html  pd_error_SA1_2021_aheadtime_percentile.html  pd_error_TAS1_2021_ahead_samples.html  pd_error_TAS1_2021_aheadtime_percentile.html  pd_error_VIC1_2021_aheadtime_percentile.html  price_cov.html
docs/source/examples/: p5min_demand_forecast_convergence.md  p5min_demand_forecast_error_2021.ipynb  pd_demand_forecast_error_2021.ipynb  price_convergence_2021.ipynb  price_convergence_2023.ipynb  visualising_p5min_demand_forecasts.md
docs/source/examples/styling/: matplotlib_styling.mplstyle
joss-paper/: paper.bib  paper.md
scripts/: scrape_mmsdm_for_tables.py
src/nemseer/: __init__.py  data.py  data_compilers.py  data_handlers.py  downloader.py  forecast_type_validators.py  loader.py  nemseer.py  query.py
src/nemseer/data/: urls.py
src/nemseer/dl_helpers/: funcs.py  functions.py  urls.py  user_agents.py  validators.py
src/nemseer/downloader_helpers/: data.py
src/nemseer/forecast_specific/: validators.py
src/nemseer/forecast_type/: run_time_generators.py  validators.py
tests/: conftest.py  test_NEMSEER.py  test_data_compilers.py  test_dl_helpers.py  test_downloader.py  test_forecast_type_validators.py  test_loader.py  test_nemseer.py  test_query.py  test_request_all_tables.py  test_run_time_generation.py
