[tool.poetry]
name = "nemseer"
version = "0.1.0"
description = "A package for downloading and handling forecasts for the National Electricity Market (NEM) from the Australian Energy Market Operator (AEMO)."
authors = ["Abhijith Prakash"]
license = "BSD 3-Clause"
readme = "README.md"

# Main dependencies for the package via poetry. Package users will need these dependencies.
[tool.poetry.dependencies]
python = "^3.8"
attrs = "^21"
beautifulsoup4 = "^4"
dask = "^2022.7.1"
nemosis = "^3"
netCDF4 = "^1.6.0"
numpy = "^1.23.0"
packaging = "^21.3"
pandas = "^1"
requests = "^2"
xarray = "^2022"

# Packages for developers for creating documentation
[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.0.2"
furo = "^2022.6.21"
myst-parser = "^0.18.0"

# Packages for developers for debugging
[tool.poetry.group.debug]
optional = true

[tool.poetry.group.debug.dependencies]
ipdb = "*"
ipython = "*"
jupyter = "^1.0.0"
notebook = "^6.4.12"

# Packages for developers for linting/autoformatting
[tool.poetry.group.style]
optional = true

[tool.poetry.group.style.dependencies]
flake8 = "*"
mypy = "*"
black = "^22.6.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"

# Packages for developers for testing
[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7"
pytest-cov = "^3"

# Config for pytest and pytest-cov
[tool.pytest.ini_options]
# path to tests for pytest
testpaths = ["tests"]
# -ra means show extra test summary info for all except passed tests
# --cov points pytest-cov to the src/ dir
# --cov-branch runs branch coverage. See https://breadcrumbscollector.tech/how-to-use-code-coverage-in-python-with-pytest/
# --cov-repot html dumps a HTML summary of pytest-cov. .gitignore file should ensure that this is ignored by Git
addopts = "-ra --cov=src/ --cov-branch --cov-report html"

# Config isort to be compatible with black
[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.1.0b2"]
build-backend = "poetry.core.masonry.api"
